--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=pw-leilao-backend
 spring.messages.basename=messages
-spring.config.import=classpath:application-secrets.properties
+spring.config.location=classpath:application-secrets.properties
 
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3304/leilao
