feat: add auth verification by using JWT token

--- a/src/main/resources/application-secrets{example}.properties
+++ b/src/main/resources/application-secrets{example}.properties
@@ -2,3 +2,5 @@ spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=
 spring.mail.password=
+jwt.secret=string_de_pelo_menos_32_caracteres
+jwt.expiration=1000000
