feat: add complete authentication system with JWT and role-based access
- Implement user registration
- Fix JWT token generation and validation
- Create DataLoader for default profiles and admin user
- Fix Spring Security configuration for API endpoints

--- a/src/main/resources/application-secrets{example}.properties
+++ b/src/main/resources/application-secrets{example}.properties
@@ -4,3 +4,8 @@ spring.mail.username=
 spring.mail.password=
 jwt.secret=string_de_pelo_menos_32_caracteres
 jwt.expiration=1000000
+
+# Configurações do usuário ADMIN padrão
+app.admin.name=Nome Administrador do Sistema
+app.admin.email=emailadmin@teste.com
+app.admin.password=Senhaadmin
