feat(auth): enhance auth response to include user info and token expiration
* The authentication endpoints (login, register) now return a structured response containing the JWT, user details, and the token's expiration time in seconds (`expiresIn`).
* Creates a new endpoint 'refresh' to refresh the token whenever it is close to expiring

--- a/src/main/resources/application-secrets{example}.properties
+++ b/src/main/resources/application-secrets{example}.properties
@@ -3,9 +3,14 @@ spring.mail.port=587
 spring.mail.username=
 spring.mail.password=
 jwt.secret=string_de_pelo_menos_32_caracteres
-jwt.expiration=1000000
+jwt.expiration=3600000
 
 # Configurações do usuário ADMIN padrão
 app.admin.name=Nome Administrador do Sistema
 app.admin.email=emailadmin@teste.com
 app.admin.password=Senhaadmin
+
+# Configurações do banco de dados
+spring.datasource.url=jdbc:mysql://localhost:PORT/SEUBANCODEDADOS
+spring.datasource.username=seuusuariodb
+spring.datasource.password=suasenhadb
