feat: adiciona funcionalidade para upload de imagem de perfil do usuário usando Cloudinary

--- a/src/main/resources/application-secrets{example}.properties
+++ b/src/main/resources/application-secrets{example}.properties
@@ -14,3 +14,8 @@ app.admin.password=Senhaadmin
 spring.datasource.url=jdbc:mysql://localhost:PORT/SEUBANCODEDADOS
 spring.datasource.username=seuusuariodb
 spring.datasource.password=suasenhadb
+
+# Configurações do Cloudinary
+cloudinary.cloud-name=SEU_CLOUD_NAME
+cloudinary.api-key=SUA_API_KEY
+cloudinary.api-secret=SEU_API_SECRET
